Fix setup.cfg description field

--- a/setup.cfg
+++ b/setup.cfg
@@ -3,7 +3,7 @@ name=final_proj
 version=0.0.1
 author=Oleh Tsariv
 author_email=olegzariw@gmail.com
-description = Package to provide functions to fetch rss data.
+description = Package designed to fetch, parse, and display RSS feeds in a user-friendly format.
 long_description = file: readme.md
 long_description_content_type = text/markdown
 classifiers =
